fixing spacing

--- a/styles/shared/_content-condensed.scss
+++ b/styles/shared/_content-condensed.scss
@@ -24,7 +24,7 @@
   .office:nth-of-type(2),
   .office:nth-of-type(3),
   .office:nth-of-type(4) {
-    padding-top: 1em;
+    padding-top: 0.5em;
   }
 
   .office:nth-of-type(2n + 1) {
