--- a/styles/shared/_content-contest.scss
+++ b/styles/shared/_content-contest.scss
@@ -32,9 +32,13 @@
       border-right: 3px solid #ff6933;
     }
 
+    tr.pre-reporting td.winner .candidate-color-label {
+      display: inline-block;
+    }
+
     td.winner {
       width: 18px;
-      padding: 0.5em 0.2em 0.5em 0.5em;
+      padding: 0.5em 0.2em;
 
       > .candidate-color-label {
         width: 10px;
