--- a/styles/shared/_content-office.scss
+++ b/styles/shared/_content-office.scss
@@ -58,7 +58,7 @@
 
 .no-map:nth-of-type(1),
 .no-map:nth-of-type(2) {
-  padding-top: 1em;
+  padding-top: 0.5em;
 }
 
 .no-map:nth-of-type(even) {
