--- a/styles/shared/_project.scss
+++ b/styles/shared/_project.scss
@@ -27,29 +27,30 @@
   margin: auto;
   text-transform: none;
   font-size: 0.9em;
-  padding: 50px 0 20px;
+  padding: 15px 0 15px;
+  font-family: "Benton Sans";
 
-  p {
+  span {
+    font-weight: bold;
+  }
+
+  .promo {
+    max-width: 525px;
+    margin: auto;
     font-family: "Benton Sans";
+    text-transform: none;
+    font-size: 0.9em;
+    font-weight: 600;
+    padding: 0px;
 
-    span {
-      font-weight: bold;
-    }
-
-    .promo {
-      max-width: 525px;
-      margin: auto;
-      font-family: "Benton Sans";
-      text-transform: none;
-      font-size: 0.9em;
-      font-weight: 600;
-      padding: 0px;
-
-      a {
-        text-decoration: none;
-      }
+    a {
+      text-decoration: none;
     }
   }
+}
+
+.first-lead {
+  padding-top: 60px;
 }
 
 // Weird race design exceptions
